--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ main { display: flex; flex-direction: column; gap: 1em;  }
 #meimg:hover { transform: scale(1.05); }
 .development { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 5em; padding-right: 5em; }
 .developmentstyle2 { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 27em; padding-right: 27em; }
+.kbsubdiv { border: 0.2em solid #01497C; margin-left: 3em; margin-right:3em; padding: 5em; margin-top: 5em;}
+.kbimg { width: 38em; height: 22em; border: 0.3em solid #01497C; margin: 1em; border-radius: 20px 3px;}
+.kbimg:hover { transform: scale(1.05); transition: transform 0.3s ease; }
 ul { text-align: center; list-style-type:circle; }
 footer { text-align: center; margin-bottom: 1em; margin-top: 1em; }
 footer a:link { color:#A9D6E5; }
