--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 head {  }
-body { display: flex; flex-direction: column; flex-wrap: nowrap; margin-left: 4em; margin-right: 4em; border: 3px solid #013A63; background-color: #012A4A; color: #A9D6E5; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: large; box-sizing: border-box; }
+body { display: flex; flex-direction: column; flex-wrap: nowrap; margin-left: 4em; margin-right: 4em; border: 3px solid #013A63; background-color: #012A4A; color: #A9D6E5; /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: large; box-sizing: border-box; text-shadow: #012A4A 3px 1px; }
 header { background-image: url(headerhero.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  }
 nav { background-color: #01497C ; padding: 0.3em; font-size: 2em;}
 nav a { text-decoration: none; }
@@ -16,7 +16,7 @@ main { display: flex; flex-direction: column; gap: 1em;  }
 .projectimg:hover { transform: scale(1.05); transition: transform 0.3s ease;}
 #meimg:hover { transform: scale(1.05); }
 .development { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 5em; padding-right: 5em; }
-.developmentstyle2 { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 27em; padding-right: 27em; }
+.developmentstyle2 { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 27em; padding-right: 27em; padding-top: 2em; padding-bottom: 2em; }
 .kbsubdiv { border: 0.2em solid #01497C; margin-left: 3em; margin-right:3em; padding: 5em; margin-top: 5em;}
 .kbimg { width: 38em; height: 22em; border: 0.3em solid #01497C; margin: 1em; border-radius: 20px 3px;}
 .kbimg:hover { transform: scale(1.05); transition: transform 0.3s ease; }
