--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main { display: flex; flex-direction: column; gap: 1em; text-shadow: #012A4A 3px
 .gallery { display: flex; flex-direction: row; justify-content: space-around; margin: 1em; background-image: url(mehero.jpg); background-repeat: no-repeat; background-size:cover; background-attachment: fixed; padding: 1em; border-radius: 5px; border: 3px solid #013A63; }
 .gallery img { transition: transform 0.3s ease; }
 .projectimg { width: 21em; height: 21em; border: 0.2em solid #01497C; margin: 0.7em;}
+.serverimg { width: 44em; height: 30em; margin: auto;}
 .projectimg:hover { transform: scale(1.05); transition: transform 0.3s ease;}
 #meimg:hover { transform: scale(1.05); }
 .development { display:flex; flex-direction: column; flex-wrap: nowrap; text-align: center; padding-left: 5em; padding-right: 5em; }
